LIST OF CHANGES

  - accessor for gatk command, gatk_cmd, created

release 51.2
  - a parser for fastqcheck files is removed

release 51.1
  - add -f flag seqchksum_merge.pl script to allow specification of a file
      of globs to identify inputs
  - we will stop generating fastqcheck files soon, so we should not
    try to get the number of reads in a fastq file from information
    in a fastqcheck file
  - add HISAT2 index build to Ref_Maker

release 51.0
  - in preparation for moving to bwa0_6 as default bwa version, added tests
      which check that the code works for soft-linked bwa
  - update Ref_Maker to produce indexes for minimap2
  - npg_common::roles::software_location:
      parameterise the tools available with software_location
      fallback to looking on path if tools does not report its own version
  - the following no longer used scripts are removed:
      bin/generate_cached_fastq, src/gcn_maker.d, bin/npg_fastq2fast
  - npg_common::extractor::fastq - functions for creating a cache of small
      fastq files and retrieving data from this cached are removed since this
      functionality has been moved to the stage2 alignment function of the
      pipeline

release 50.17
  - update travis install
    - use samtools/htslib 1.6 from samtools repos
    - drop perl 5.16 from matrix
    - drop pb_calibration

release 50.16
  - RefMaker: updated to generate STAR aligner reference genome indexes
  - Travis not to build illumina2bam as its jar(s) are not used anymore

release 50.15
  - RefMaker not to build smalt index

release 50.14
  - seqchksum_merge.pl:
      fix bug when handling different format files and added a test
      dropped -n option
      added a check for non-unique partitions in each input file

release 50.13
  - add "-F 0x 200" flag to fastq_summ command to filter qc fails from 10k read fastq subsets used for (some) QC checks

release 50.12
  - seqchksum_merge.pl
      updated to generate chksums on the fly if given a bam file